--- a/8月份开发详解.md
+++ b/8月份开发详解.md
@@ -12,3 +12,10 @@ SELECT * FROM USER_TABLES; 当前用户下的表
 ---------------------
 如果 要实现 input的title文字 同时文字是加粗
 ---------------------
+ 
+ 
+### 8.6实际开发当中出现和遇到的问题 的思考
+ 
+关于学习都是积累起来的 所以很多知识都需要讲清楚底层的内容 同时也需要我们将线管内容编程基础案例 然后根据实际的需要做出不同的调整
+ 
+所以 知识的学习就是学习基本的案例 然后根据案例 将知识转化为具体开发当中的业务逻辑
