--- a/8月份开发详解.md
+++ b/8月份开发详解.md
@@ -19,3 +19,17 @@ SELECT * FROM USER_TABLES; 当前用户下的表
 关于学习都是积累起来的 所以很多知识都需要讲清楚底层的内容 同时也需要我们将线管内容编程基础案例 然后根据实际的需要做出不同的调整
  
 所以 知识的学习就是学习基本的案例 然后根据案例 将知识转化为具体开发当中的业务逻辑
+
+### 说说自己的计划 8月13号
+ 
+自己 的计划是主要完成今年全部的计算机二级考试计划和 投资银行的主要业务 保证 今年的考试一定要过 保证明年拿到毕业证顺利完成学业 然后有了本科学历可以更好的参加考试和学习 帮助提升自己的能力 同时拿到更多的收入 帮助自己更好的改善自己的生活
+ 
+在 保证考试二级 + 投资银行的前提之下 顺下的任务就是需要在空余时间学习C++的知识 之所以学习C++ 目的是为了帮助自己理解windows软件的系统 架构 更好的开发出来自己的工具软件  从而帮助自己利用工具  帮助自己的哥哥更好的打开市场 
+ 
+  软考  程序员是今年的选修课程  可以作为自己能力提升的一部分 来辅助提升自己
+  
+  **计算机二级考试**
+  **投资银行学 知识整理**
+  **软考程序员有时间需要进行学习**
+  **互联网架构师视频  边看边敲**
+  **C++ 是选修课程**
